# ubc-WAM95

./: .gitignore  CMakeLists.txt  README
conf/: floats.yml  strings.yml  vars.yml
demo/: CMakeLists.txt  demo.cxx  demo.h  main.cxx  main_table.h  test.cxx  test2.cxx  unit_test.cxx
exp/: CMakeLists.txt  action.cxx  action.h  active.cxx  active.h  bh.cxx  bh.h  example.cxx  example.h  experiment.cxx  experiment.h  flip.cxx  flip.h  tactile.cxx  tactile.h  wam.cxx
lib/: CMakeLists.txt  cart_type_table.h  control.cxx  control.h  hand_type_table.h  input_type_table.h  io.cpp  io.h  macros.h  mainline.cxx  mainline.h  parameter_table.h  senses.cxx  senses.h  stdheader.h  tool_type_table.h  type_table.h  utils-inl.h  utils.cxx  utils.h  wam_type_table.h
recorded/: tp.csv
robot/: CMakeLists.txt  robot.cxx  robot.h  robot_table.h
robot/bak/: main.cpp  robot.bak
robot/control/: Awam_system.cxx  CMakeLists.txt  SaA.cxx  SaA.h  SaA1.cxx  SaA2.cxx  SaA3.cxx  SaS.cxx  SaS.h  control.cxx  control.h  control_mode_switcher.h  control_strategy.cxx  control_strategy.h  naive_bayes_system.cxx  naive_bayes_system.h  parameter_estimator.cxx  rtcontrol.cpp  rtcontrol.cxx  rtcontrol.h  wam_system.cxx
robot/memory/: CMakeLists.txt  memory.cxx  memory.h  rtmemory.cpp  rtmemory.cxx  rtmemory.h  sensor_stream_system.cxx  var_server.cxx
robot/senses/: CMakeLists.txt  co2qd_system.h  cp_system.h  hand_system.cxx  naive_bayes_system.cxx  naive_bayes_system.h  parameter_estimator.cxx  parameter_estimator.h  pls_system.cxx  pls_system.h  qd2co_system.h  rtsenses.cpp  senses.cxx  senses.h  senses_table.h  sensor_stream_system.cxx  sensor_stream_system.h
src/: main.cpp
tap/: CMakeLists.txt  ctrl_table.h  display.cxx  display.h  loop.cxx  misc_table.h  play.cxx  play.h  play_table.h  tap.cxx  tap.h  tap_table.h  teach.cxx  teach.h  teach_table.h  var_table.h
